[gd_scene load_steps=41 format=2]

[ext_resource path="res://engine/scenes/objects/fluid/Fluid.gd" type="Script" id=1]
[ext_resource path="res://engine/sprites/objects/fluid/water/bgWater2.png" type="Texture" id=2]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplashSM_2.png" type="Texture" id=3]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_7.png" type="Texture" id=4]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_0.png" type="Texture" id=5]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_1.png" type="Texture" id=6]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_8.png" type="Texture" id=7]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplashSM_4.png" type="Texture" id=8]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_3.png" type="Texture" id=9]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_4.png" type="Texture" id=10]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplashSM_1.png" type="Texture" id=11]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_6.png" type="Texture" id=12]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_5.png" type="Texture" id=13]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplashSM_3.png" type="Texture" id=14]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplash_2.png" type="Texture" id=15]
[ext_resource path="res://engine/sprites/objects/fluid/water/sWaterSplashSM_0.png" type="Texture" id=16]
[ext_resource path="res://engine/sprites/objects/fluid/water/sBubble_1.png" type="Texture" id=17]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sBubbleL_0.png" type="Texture" id=18]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sBubbleL_1.png" type="Texture" id=19]
[ext_resource path="res://engine/sprites/objects/fluid/water/sBubble_0.png" type="Texture" id=20]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_2.png" type="Texture" id=21]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplashSM_3.png" type="Texture" id=22]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_8.png" type="Texture" id=23]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_7.png" type="Texture" id=24]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_3.png" type="Texture" id=25]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_5.png" type="Texture" id=26]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_6.png" type="Texture" id=27]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_4.png" type="Texture" id=28]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_0.png" type="Texture" id=29]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplashSM_1.png" type="Texture" id=30]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplash_1.png" type="Texture" id=31]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplashSM_2.png" type="Texture" id=32]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplashSM_4.png" type="Texture" id=33]
[ext_resource path="res://engine/sprites/objects/fluid/lava/sLavaSplashSM_0.png" type="Texture" id=34]
[ext_resource path="res://engine/classes/nodes/ExArea2D.gd" type="Script" id=35]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 254, 157 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 508, 0 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 11 ), ExtResource( 3 ), ExtResource( 14 ), ExtResource( 8 ) ],
"loop": false,
"name": "water_small",
"speed": 30.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": false,
"name": "water_large",
"speed": 30.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 22 ), ExtResource( 33 ) ],
"loop": false,
"name": "lava_small",
"speed": 30.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 31 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 23 ) ],
"loop": false,
"name": "lava_large",
"speed": 30.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "water_small",
"speed": 1.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": false,
"name": "water_large",
"speed": 1.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": false,
"name": "lava_small",
"speed": 1.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "lava_large",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 1 )

[node name="Fluid" type="Control"]
margin_right = 508.0
margin_bottom = 314.0
rect_clip_content = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.545098, 0.756863, 0.733333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.74902 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 32.0
margin_bottom = -90.0
rect_clip_content = true
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
space_override = 3
gravity = 70.0
linear_damp = 3.0
collision_layer = 524288
collision_mask = 15
script = ExtResource( 35 )
safe_wait_time = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 254, 157 )
shape = SubResource( 1 )

[node name="SurfaceArea2D" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 15
script = ExtResource( 35 )
safe_wait_time = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="SurfaceArea2D"]
shape = SubResource( 2 )

[node name="Splash" type="AnimatedSprite" parent="."]
position = Vector2( 39, 8 )
frames = SubResource( 3 )
animation = "lava_small"

[node name="Bubble" type="RigidBody2D" parent="."]
position = Vector2( 28, 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Bubble"]
frames = SubResource( 4 )
animation = "lava_large"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bubble"]
shape = SubResource( 5 )

[node name="ShowTween" type="Tween" parent="."]

[connection signal="body_entered_safe" from="Area2D" to="." method="_on_Area2D_body_entered_safe"]
[connection signal="body_exited_safe" from="Area2D" to="." method="_on_Area2D_body_exited_safe"]
[connection signal="body_entered_safe" from="SurfaceArea2D" to="." method="_on_SurfaceArea2D_body_entered_safe"]
